feat: another round of improvements
* Set pagination limit
* Use middleware for publicReadOnly endpoint
* Zitadel requires a valid token and a configured role
* Accept bare url for auth zero issuer URL
* Validate timerange param
* Allow to filter getscm query based date filter
* Correctly close pg connection
* fix report query qq
