# docs/swagger.json
@@ -598,6 +598,12 @@
                         "description": "End time for filtering reports (RFC3339 format)",
                         "name": "end_time",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Only return the latest report per pipeline ID, default is true",
+                        "name": "latest",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -605,6 +611,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/server.GetPipelineReportsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.DefaultResponseModel"
                         }
                     },
                     "500": {
